--- a/CurrencyConverter/CurrencyConverter/Modules/Wallet/Wallet.storyboard
+++ b/CurrencyConverter/CurrencyConverter/Modules/Wallet/Wallet.storyboard
@@ -108,11 +108,11 @@
                                                                                             <constraint firstAttribute="trailing" secondItem="0mG-HD-Dky" secondAttribute="trailing" id="yjH-Oi-Bie"/>
                                                                                         </constraints>
                                                                                     </view>
-                                                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0.00" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="JJI-QR-HBH">
+                                                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0.00" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="JJI-QR-HBH" customClass="CurrencyTextField" customModule="CurrencyConverter" customModuleProvider="target">
                                                                                         <rect key="frame" x="96" y="0.0" width="262" height="54"/>
                                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
-                                                                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                                                                     </textField>
                                                                                 </subviews>
                                                                             </stackView>
@@ -164,11 +164,11 @@
                                                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="QK4-vQ-OIp">
                                                                                 <rect key="frame" x="12" y="0.0" width="346" height="54"/>
                                                                                 <subviews>
-                                                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0.00" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="rGi-VD-82R">
+                                                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0.00" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="rGi-VD-82R" customClass="CurrencyTextField" customModule="CurrencyConverter" customModuleProvider="target">
                                                                                         <rect key="frame" x="0.0" y="0.0" width="250" height="54"/>
                                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
-                                                                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                                                                     </textField>
                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6X9-jK-iYE">
                                                                                         <rect key="frame" x="262" y="0.0" width="84" height="54"/>
@@ -361,7 +361,7 @@
         <image name="arrow.up" catalog="system" width="118" height="128"/>
         <image name="chevron.down" catalog="system" width="128" height="70"/>
         <namedColor name="greenFaded">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.20399999618530273" green="0.77999997138977051" blue="0.34900000691413879" alpha="0.10000000149011612" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
