--- a/CurrencyConverter/CurrencyConverter/Modules/Wallet/TableCells/TransactionTableCell/TransactionTableCell.xib
+++ b/CurrencyConverter/CurrencyConverter/Modules/Wallet/TableCells/TransactionTableCell/TransactionTableCell.xib
@@ -22,58 +22,73 @@
                         <rect key="frame" x="16" y="4" width="358" height="52"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ffy-ko-wBs">
-                                <rect key="frame" x="16" y="0.0" width="326" height="52"/>
+                                <rect key="frame" x="16" y="8" width="326" height="36"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L2C-rb-mC2">
-                                        <rect key="frame" x="0.0" y="0.0" width="26.666666666666668" height="52"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="26.666666666666668" height="36"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oRe-5L-LXw">
-                                                <rect key="frame" x="0.0" y="3" width="13.333333333333334" height="46.333333333333336"/>
+                                                <rect key="frame" x="0.0" y="2.9999999999999982" width="13.333333333333334" height="30.333333333333329"/>
                                                 <color key="tintColor" systemColor="systemRedColor"/>
                                                 <imageReference key="image" image="arrow.down" catalog="system" symbolScale="small"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="taE-SJ-x6c">
-                                                <rect key="frame" x="13.333333333333336" y="3" width="13.333333333333336" height="46.333333333333336"/>
+                                                <rect key="frame" x="13.333333333333336" y="2.9999999999999982" width="13.333333333333336" height="30.333333333333329"/>
                                                 <color key="tintColor" systemColor="systemGreenColor"/>
                                                 <imageReference key="image" image="arrow.up" catalog="system" symbolScale="small"/>
                                             </imageView>
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pzY-mZ-7zI" userLabel="Spacer">
-                                        <rect key="frame" x="26.666666666666664" y="0.0" width="16" height="52"/>
+                                        <rect key="frame" x="26.666666666666664" y="0.0" width="16" height="36"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="16" id="lXd-g2-Y8C"/>
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="D9c-eu-KUf">
-                                        <rect key="frame" x="42.666666666666671" y="0.0" width="37.333333333333329" height="52"/>
+                                        <rect key="frame" x="42.666666666666671" y="0.0" width="33.333333333333329" height="36"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USD" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qKN-Ze-ENp">
-                                                <rect key="frame" x="0.0" y="0.0" width="37.333333333333336" height="26"/>
-                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
-                                                <color key="textColor" systemColor="systemGreenColor"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USD" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wRg-uw-GAu">
+                                                <rect key="frame" x="0.0" y="0.0" width="33.333333333333336" height="18"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                                <color key="textColor" systemColor="systemRedColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USD" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wRg-uw-GAu">
-                                                <rect key="frame" x="0.0" y="26" width="37.333333333333336" height="26"/>
-                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
-                                                <color key="textColor" systemColor="systemRedColor"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USD" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qKN-Ze-ENp">
+                                                <rect key="frame" x="0.0" y="18" width="33.333333333333336" height="18"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                                <color key="textColor" systemColor="systemGreenColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9sA-3y-Ria">
-                                        <rect key="frame" x="80" y="0.0" width="246" height="52"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9sA-3y-Ria" userLabel="Spacer">
+                                        <rect key="frame" x="75.999999999999986" y="0.0" width="224.66666666666663" height="36"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Txg-sX-iov">
+                                        <rect key="frame" x="300.66666666666669" y="0.0" width="25.333333333333314" height="36"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="URx-kF-fKS">
+                                                <rect key="frame" x="0.0" y="0.0" width="25.333333333333332" height="18"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dzh-oM-FUU" userLabel="Spacer">
+                                                <rect key="frame" x="0.0" y="18" width="25.333333333333332" height="18"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="0.25" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="Ffy-ko-wBs" secondAttribute="bottom" id="1sn-rA-nEa"/>
-                            <constraint firstItem="Ffy-ko-wBs" firstAttribute="top" secondItem="Ud9-Dc-uj7" secondAttribute="top" id="WT0-yg-5WG"/>
+                            <constraint firstAttribute="bottom" secondItem="Ffy-ko-wBs" secondAttribute="bottom" constant="8" id="1sn-rA-nEa"/>
+                            <constraint firstItem="Ffy-ko-wBs" firstAttribute="top" secondItem="Ud9-Dc-uj7" secondAttribute="top" constant="8" id="WT0-yg-5WG"/>
                             <constraint firstAttribute="trailing" secondItem="Ffy-ko-wBs" secondAttribute="trailing" constant="16" id="aUv-gO-jWu"/>
                             <constraint firstItem="Ffy-ko-wBs" firstAttribute="leading" secondItem="Ud9-Dc-uj7" secondAttribute="leading" constant="16" id="ebs-SC-qQb"/>
                         </constraints>
@@ -91,6 +106,7 @@
             <connections>
                 <outlet property="containerView" destination="Ud9-Dc-uj7" id="exh-QZ-LLM"/>
                 <outlet property="creditLabel" destination="wRg-uw-GAu" id="t0e-79-MGx"/>
+                <outlet property="dateLabel" destination="URx-kF-fKS" id="QY6-84-0of"/>
                 <outlet property="debitLabel" destination="qKN-Ze-ENp" id="h9c-Sj-5rs"/>
             </connections>
             <point key="canvasLocation" x="48" y="3"/>
